901 bug attribution is hidden behind the date picker on the main map (#903)

--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -157,3 +157,13 @@ details.maplibregl-ctrl-attrib[open] {
 .maplibregl-ctrl-attrib-button::-webkit-details-marker {
     display: none;
 }
+
+@media (max-width: 800px) {
+    details.maplibregl-ctrl-attrib {
+        top: 50px
+    }
+
+    details.maplibregl-ctrl-attrib.maplibregl-compact-show {
+        width: 50%
+    }
+}
